--- a/index.html
+++ b/index.html
@@ -19,8 +19,17 @@
         </nav>
     </header>
     <main>
-        <h2>Welcome!</h2>
-        <p>This is the personal website of Your Name. Here, you can learn about my research, publications, and more.</p>
+        <section id="intro">
+            <h2>Welcome!</h2>
+            <p>This is the personal website of <strong>Your Name</strong>. Here, you can learn about my research, publications, and more.</p>
+        </section>
+        <section id="bio">
+            <h2>About Me</h2>
+            <div class="bio-container">
+                <img src="assets/images/yourphoto.jpg" alt="Your Photo" class="profile-photo">
+                <p>Hello! I'm <strong>Your Name</strong>, a postdoctoral researcher specializing in AI, vehicular networks, and edge computing. I have a Ph.D. in Computer Science and a deep passion for exploring innovative solutions in intelligent transportation systems and cloud computing.</p>
+            </div>
+        </section>
     </main>
     <footer>
         <p>© 2024 Your Name</p>
