--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
-        <p>Postdoctoral Fellow | AI Enthusiast | Researcher</p>
+        <h1>Farhoud Jafari Kaleibar</h1>
+        <p>Postdoctoral Fellow | Carleton University</p>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
@@ -32,7 +32,7 @@
         </section>
     </main>
     <footer>
-        <p>© 2024 Your Name</p>
+        <p>© 2024 Farhoud</p>
     </footer>
 </body>
 </html>
