--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section id="bio">
             <h2>About Me</h2>
             <div class="bio-container">
-                <img src="assets/images/yourphoto.jpg" alt="Your Photo" class="profile-photo">
+                <img src="assets/images/citations.jpg" alt="Your Photo" class="profile-photo">
                 <p>Hello! I'm <strong>Your Name</strong>, a postdoctoral researcher specializing in AI, vehicular networks, and edge computing. I have a Ph.D. in Computer Science and a deep passion for exploring innovative solutions in intelligent transportation systems and cloud computing.</p>
             </div>
         </section>
