--- a/publications.html
+++ b/publications.html
@@ -19,10 +19,33 @@
     </header>
     <main>
         <h2>Publications</h2>
-        <ul>
-            <li><b>Title of Paper</b>, Journal Name, Year. <a href="#">[Link]</a></li>
-            <li><b>Another Paper</b>, Conference Name, Year. <a href="#">[Link]</a></li>
-        </ul>
+        
+        <section>
+            <h3>Journal Papers</h3>
+            <ul>
+                <li><b>F. J. Kaleibar and M. St-Hilaire</b>, "SLA-Based Service Provisioning Optimization in Vehicular Cloud Networks Using Fuzzy Logic," <i>IEEE Access</i>, vol. 12, pp. 101727-101744, 2024.</li>
+                <li><b>Jafari Kaleibar, F. and Abbaspour, M.</b>, "SLA-based Service Provisioning Approach in Vehicular Cloud Network," <i>Cluster Computing</i>, 2021.</li>
+                <li><b>Jafari Kaleibar, F. and Abbaspour, M.</b>, "TOPVISOR: Two‐level controller‐based approach for service advertisement and discovery in vehicular cloud network," <i>International Journal of Communication Systems</i>, vol. 33(3), 2020.</li>
+                <li><b>F. Jafari Kaleibar, M. Abbaspour, and H. Aghdasi</b>, "An Energy-Efficient Hybrid Routing Method for Wireless Sensor Networks with Mobile Sink," <i>Wireless Personal Communications</i>, Springer, vol. 90, no. 4, pp. 2001-2015, 2016.</li>
+            </ul>
+        </section>
+        
+        <section>
+            <h3>Conference Papers</h3>
+            <ul>
+                <li><b>F.J. Kaleibar, and St-Hilaire, M.</b>, “A Connectivity-aware Method for Infrastructure-less Vehicular Cloud Service Discovery,” <i>IEEE 10th World Forum on Internet of Things (WF-IoT)</i>, 2024. (Accepted)</li>
+                <li><b>F.J. Kaleibar, and St-Hilaire, M.</b>, “An Adaptive Clustering Approach for Dynamic Service Provisioning in Vehicular Cloud Networks,” <i>IEEE 10th World Forum on Internet of Things (WF-IoT)</i>, 2024. (Accepted)</li>
+                <li><b>F.J. Kaleibar, H. Kashfi</b>, “A Comprehensive Approach to Integrate Generative AI in Vehicular Cloud Networks,” <i>IEEE 2024 8th Iranian Conference on Advances in Enterprise Architecture (ICAEA)</i>, 2024. (Accepted)</li>
+                <li><b>A. Noormahmoodi, F. Rahimi, F.J. Kaleibar</b>, “A Multi-Agent Retrieval-Augmented Generation Model with Specialized Domain Agents,” <i>IEEE 2024 8th Iranian Conference on Advances in Enterprise Architecture (ICAEA)</i>, 2024. (Accepted)</li>
+                <li><b>F. Feizi, A. Hossein Nia, M.M. Hemmatyar, F. Rahimi, F.J. Kaleibar</b>, “TELLM: Advancements in Knowledge Incorporation and Task-specific Enhancement of Large Language Models,” <i>IEEE 2024 32st International Conference on Electrical Engineering</i>, 2024.</li>
+                <li><b>Feizi, F., Kaleibar, F. J., Rahimi, F., Kashfi, H., & Nia, A. H.</b>, “Digital Disruption in Telecommunication: Shifting from Telco to Tech Co,” <i>IEEE 2023 7th Iranian Conference on Advances in Enterprise Architecture (ICAEA)</i>, 2023.</li>
+                <li><b>Rahimi, F., Kaleibar, F. J., Feizi, F., Nia, A. H., & Kashfi, H.</b>, “Navigating Data Governance in the Telecom Industry,” <i>IEEE 2023 7th Iranian Conference on Advances in Enterprise Architecture (ICAEA)</i>, 2023.</li>
+                <li><b>Nia, A. H., Kaleibar, F. J., Feizi, F., Rahimi, F., & Kashfi, H.</b>, “Unlocking the Power of Data in Telecom: Building an Effective MLOps Infrastructure for Model Deployment,” <i>IEEE 2023 7th Iranian Conference on Advances in Enterprise Architecture (ICAEA)</i>, 2023.</li>
+                <li><b>Jafari Kaleibar, F. and Abbaspour, M.</b>, “An approach to model the optimal service provisioning in vehicular cloud networks,” <i>11th Information and Knowledge Technology Conference</i>, IEEE, Tehran, Iran, 2020.</li>
+                <li><b>F. Jafari Kaleibar, M. Abbaspour</b>, “SLA-Based Service Provisioning in Vehicular Cloud Network,” <i>The 5th International Conference on Web Research</i>, Tehran, Iran, 2019.</li>
+                <li><b>H Haghighi, M Mobasheri, F.J. Kaleibar, F Hoseini</b>, “Use Cases of the Application Reference Model in IRAN,” <i>21st International Conference on Enterprise Information Systems</i>, Heraklion, Crete, Greece, vol. 2, 2019.</li>
+            </ul>
+        </section>
     </main>
     <footer>
         <p>© 2024 Your Name</p>
