--- a/cv.html
+++ b/cv.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <h2>Curriculum Vitae</h2>
-        <p><a href="path-to-your-CV.pdf" download>Download my CV</a></p>
+        <p><a href="pFarhoudJafariKaleibar-2024-CV.pdf" download>Download my CV</a></p>
     </main>
     <footer>
         <p>© 2024 Your Name</p>
