--- a/research.html
+++ b/research.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Research</title>
+    <title>Your Name - Research Interests</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -18,8 +18,23 @@
         </nav>
     </header>
     <main>
-        <h2>My Research Interests</h2>
-        <p>Describe your research focus areas, projects, and methodologies.</p>
+        <h2>My Research Focus Areas</h2>
+        <ul>
+            <li><b>Vehicular Networks</b>
+                <ul>
+                    <li>Vehicular Cloud Computing</li>
+                    <li>Routing Protocols</li>
+                    <li>Resource Management</li>
+                </ul>
+            </li>
+            <li><b>Space-Air-Ground Integrated Networks</b></li>
+            <li><b>Edge Cloud Applications</b></li>
+            <li><b>Wireless Sensor Networks</b></li>
+            <li><b>Software Defined Networking</b></li>
+            <li><b>Internet of Things (IoT)</b></li>
+            <li><b>Decision Science and Learning Techniques</b></li>
+            <li><b>Generative AI</b></li>
+        </ul>
     </main>
     <footer>
         <p>© 2024 Your Name</p>
