--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2>About Me</h2>
             <div class="bio-container">
                 <img src="assets/images/citations.jpg" alt="Your Photo" class="profile-photo">
-                <p>Hello! I'm <strong>Farhoud Jafari</strong>, a postdoctoral researcher specializing in vehicular cloud networks, AI and edge computing. I have a Ph.D. in Computer Science and a deep passion for exploring innovative solutions in intelligent transportation systems and cloud computing.</p>
+                <p>Hello! I'm <strong>Farhoud Jafari</strong>, a postdoctoral researcher specializing in vehicular cloud networks, AI and edge computing. I have a Ph.D. in Computer Engineering and a deep passion for exploring innovative solutions in intelligent transportation systems and cloud computing.</p>
             </div>
         </section>
     </main>
