--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p>Postdoctoral Fellow | Carleton University</p>
         <nav>
             <a href="index.html">Home</a>
-            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
             <a href="publications.html">Publications</a>
             <a href="research.html">Research</a>
             <a href="cv.html">CV</a>
