--- a/publications.html
+++ b/publications.html
@@ -11,7 +11,7 @@
         <h1>Publications</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
             <a href="publications.html">Publications</a>
             <a href="research.html">Research</a>
             <a href="cv.html">CV</a>
