--- a/research.html
+++ b/research.html
@@ -1,3 +1,4 @@
+            <a href="contact.html">Contact</a>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +12,7 @@
         <h1>Research Interests</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
             <a href="publications.html">Publications</a>
             <a href="research.html">Research</a>
             <a href="cv.html">CV</a>
