--- a/research.html
+++ b/research.html
@@ -16,6 +16,7 @@
             <a href="publications.html">Publications</a>
             <a href="research.html">Research</a>
             <a href="cv.html">CV</a>
+            <a href="activities.html">Activities</a>
         </nav>
     </header>
     <main>
