--- a/activities.html
+++ b/activities.html
@@ -23,8 +23,8 @@
         <section>
             <h3>Conference Technical Program Committee</h3>
             <ul>
-                <li>ACM/SPEC 2025 16th International Conference on Performance Engineering (ICPE), Canada</li>
-                <li>IEEE 2023 14th International Conference on Information and Knowledge Technology, Iran</li>
+                <li>ACM/SPEC 2025 16th International Conference on Performance Engineering (ICPE), Toronto, Canada</li>
+                <li>IEEE 2023 14th International Conference on Information and Knowledge Technology, Isfahan, Iran</li>
             </ul>
         </section>
         <section>
