--- a/activities.html
+++ b/activities.html
@@ -30,7 +30,7 @@
         <section>
             <h3>Workshops</h3>
             <ul>
-                <li>"Digital Transformation: From Maturity Measurement to Ideation," <i>IEEE 2023 7th Iranian Conference on Advances in Enterprise Architecture (ICAEA)</i></li>
+                <li>"Digital Transformation: From Maturity Measurement to Ideation," <i>IEEE 2023 7th Iranian Conference on Advances in Enterprise Architecture (ICAEA), Tehran, Iran</i></li>
             </ul>
         </section>
     </main>
