--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,8 @@
     <main>
         <h2>Contact Information</h2>
         <ul>
-            <li><b>Email:</b> <a href="mailto:fhd.jafari@gmail.com">fhd.jafari@gmail.com</a>, <a href="mailto:farhoudjafarikaleiba@cunet.carleton.ca">farhoudjafarikaleiba@cunet.carleton.ca</a>, <a href="mailto:farhoud@yorku.ca">farhoud@yorku.ca</a></li>
+            <li><b>Gmail:</b> <a href="mailto:fhd.jafari@gmail.com">fhd.jafari@gmail.com</a></li>
+            <li><b>University Email:</b> <a href="mailto:farhoudjafarikaleiba@cunet.carleton.ca">farhoudjafarikaleiba@cunet.carleton.ca</a>, <a href="mailto:farhoud@yorku.ca">farhoud@yorku.ca</a></li>
             <li><b>Address:</b> Ottawa, ON, Canada</li>
         </ul>
     </main>
