--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
         <ul>
             <li><b>Gmail:</b> <a href="mailto:fhd.jafari@gmail.com">fhd.jafari@gmail.com</a></li>
             <li><b>University Email:</b> <a href="mailto:farhoudjafarikaleiba@cunet.carleton.ca">farhoudjafarikaleiba@cunet.carleton.ca</a>, <a href="mailto:farhoud@yorku.ca">farhoud@yorku.ca</a></li>
-             <li><b>Google Scholar:</b> <a href="https://scholar.google.com/citations?user=jGEEZ-4AAAAJ&hl=en&oi=ao" target="_blank">Farhoud Jafari Kaleibar on Google Scholar</a></li>
+             <li><a href="https://scholar.google.com/citations?user=jGEEZ-4AAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a></li>
             <li><b>LinkedIn:</b> <a href="https://www.linkedin.com/in/farhoud-jafari-b0225970" target="_blank">Farhoud Jafari Kaleibar on LinkedIn</a></li>
             <li><b>Address:</b> Ottawa, ON, Canada</li>
         </ul>
