--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - About</title>
+    <title>Farhoud - About</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
         <p>Introduce yourself: academic background, current role, interests, and more.</p>
     </main>
     <footer>
-        <p>© 2024 Your Name</p>
+        <p>© 2024 FJK</p>
     </footer>
 </body>
 </html>
