--- a/publications.html
+++ b/publications.html
@@ -24,7 +24,7 @@
         <section>
             <h3>Journal Papers</h3>
             <ul>
-                <li><b>F. J. Kaleibar, M. St-Hilaire, M. Barati</b>, "A Customized Genetic Algorithm for SLA-Aware Service Provisioning in Infrastructure-less Vehicular Cloud Networks," <i>IEEE Transaction on Services Computing (Accepted)</i>,2025.</li>
+                <li><b>F. J. Kaleibar, M. St-Hilaire, M. Barati</b>, "A Customized Genetic Algorithm for SLA-Aware Service Provisioning in Infrastructure-less Vehicular Cloud Networks," <i>IEEE Transaction on Services Computing</i>, 2025.</li>
                 <li><b>F. J. Kaleibar and M. St-Hilaire</b>, "SLA-Based Service Provisioning Optimization in Vehicular Cloud Networks Using Fuzzy Logic," <i>IEEE Access</i>, vol. 12, pp. 101727-101744, 2024.</li>
                 <li><b>Jafari Kaleibar, F. and Abbaspour, M.</b>, "SLA-based Service Provisioning Approach in Vehicular Cloud Network," <i>Cluster Computing</i>, 2021.</li>
                 <li><b>Jafari Kaleibar, F. and Abbaspour, M.</b>, "TOPVISOR: Two‐level controller‐based approach for service advertisement and discovery in vehicular cloud network," <i>International Journal of Communication Systems</i>, vol. 33(3), 2020.</li>
