--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Farhoud Jafari Kaleibar</h1>
-        <p>Postdoctoral Fellow | Carleton University</p>
+        <p>Postdoctoral Fellow | York University</p>
         <nav>
             <a href="index.html">Home</a>
             <a href="contact.html">Contact</a>
@@ -24,7 +24,7 @@
             <h2>About Me</h2>
             <div class="bio-container">
                 <img src="assets/images/citations.jpg" alt="Your Photo" class="profile-photo">
-                <p>Hello! I'm <strong>Farhoud Jafari</strong>, a postdoctoral researcher at the Carleton University, specializing in vehicular cloud networks, AI and edge computing. I have a Ph.D. in Computer Engineering and a deep passion for exploring innovative solutions in intelligent transportation systems and cloud computing.</p>
+                <p>Hello! I'm <strong>Farhoud Jafari</strong>, a postdoctoral researcher at the York University, specializing in vehicular cloud networks, AI and edge computing. I have a Ph.D. in Computer Engineering and a deep passion for exploring innovative solutions in intelligent transportation systems and cloud computing.</p>
                 <p>Over the years, I've held several impactful roles. I served as the Manager of the Artificial Intelligence Lab (AI Lab) at MTN Irancell, where I led cutting-edge R&D initiatives. As a Senior Enterprise Architect, I contributed to large-scale projects involving enterprise solutions for different industries. My experience also includes roles as a Senior Software Analyst and Technical Manager for enterprise architecture projects. These positions have honed my skills in research, development, and leadership, helping me bridge academic insights with practical applications.</p>
                 <p> </p>
                 <p> </p>
