--- a/cv.html
+++ b/cv.html
@@ -21,6 +21,8 @@
     <main>
         <h2>Curriculum Vitae</h2>
         <p><a href="FarhoudJafariKaleibar-2024-CV.pdf" download>Download my CV</a></p>
+<p> sudo apt install g++ python3 python3-dev pkg-config sqlite3 python3-setuptools git cmake ninja-build qtbase5-dev qtchooser qt5-qmake qtbase5-dev-tools python3-pygraphviz python3-gi python3-gi-cairo gir1.2-goocanvas-2.0 python3-pip python3-matplotlib python3-tk python3-dev libxml2-dev libgtk-3-dev libsqlite3-dev -y
+</p>
     </main>
     <footer>
         <p>© 2024 Your Name</p>
