--- a/publications.html
+++ b/publications.html
@@ -35,9 +35,10 @@
         <section>
             <h3>Conference Papers</h3>
             <ul>
-                <li><b>F.J. Kaleibar, and St-Hilaire, M.</b>, “A Connectivity-aware Method for Infrastructure-less Vehicular Cloud Service Discovery,” <i>IEEE 10th World Forum on Internet of Things (WF-IoT)</i>, 2024.</li>
-                <li><b>F.J. Kaleibar, and St-Hilaire, M.</b>, “An Adaptive Clustering Approach for Dynamic Service Provisioning in Vehicular Cloud Networks,” <i>IEEE 10th World Forum on Internet of Things (WF-IoT)</i>, 2024.</li>
-                <li><b>F.J. Kaleibar, H. Kashfi</b>, “A Comprehensive Approach to Integrate Generative AI in Vehicular Cloud Networks,” <i>IEEE 2024 8th Iranian Conference on Advances in Enterprise Architecture (ICAEA)</i>, 2024. (Accepted)</li>
+                <li><b>F.J. Kaleibar, St-Hilaire, M., Barati, M. </b>, “A Tailored Genetic Algorithm Approach for SLA-Based Service Provisioning in Vehicular Cloud Networks,” <i>The 10th International Conference on Fog and Mobile Edge Computing (WF-IoT), Tampa, Florida, USA </i>, 2025 (Accepted).</li>
+                <li><b>F.J. Kaleibar, and St-Hilaire, M.</b>, “A Connectivity-aware Method for Infrastructure-less Vehicular Cloud Service Discovery,” <i>IEEE 10th World Forum on Internet of Things (WF-IoT), Ottawa, Canada </i>, 2024.</li>
+                <li><b>F.J. Kaleibar, and St-Hilaire, M.</b>, “An Adaptive Clustering Approach for Dynamic Service Provisioning in Vehicular Cloud Networks,” <i>IEEE 10th World Forum on Internet of Things (WF-IoT), Ottawa, Canada</i>, 2024.</li>
+                <li><b>F.J. Kaleibar, H. Kashfi</b>, “A Comprehensive Approach to Integrate Generative AI in Vehicular Cloud Networks,” <i>IEEE 2024 8th Iranian Conference on Advances in Enterprise Architecture (ICAEA), Tehran, Iran</i>, 2024. (Accepted)</li>
             <!--
                 <li><b>A. Noormahmoodi, F. Rahimi, F.J. Kaleibar</b>, “A Multi-Agent Retrieval-Augmented Generation Model with Specialized Domain Agents,” <i>IEEE 2024 8th Iranian Conference on Advances in Enterprise Architecture (ICAEA)</i>, 2024. (Accepted)</li>
                 <li><b>F. Rahimi, A. Noormahmoodi, A. Sadeghi, F.J. Kaleibar</b>, “Enhancing Proactive Customer Care with Machine Learning Models for KPI Forecasting and Experience Prediction,” <i>IEEE 2024 8th Iranian Conference on Advances in Enterprise Architecture (ICAEA)</i>, 2024. (Accepted)</li>
