--- a/activities.html
+++ b/activities.html
@@ -21,7 +21,7 @@
     <main>
         <h2>My Professional Activities</h2>
         <section>
-            <h3>Conference Organizing Committees</h3>h3>
+            <h3>Conference Organizing Committees</h3>
               <ul>
                 <li> Volunteer Chair, ACM/SPEC 2025 16th International Conference on Performance Engineering (ICPE), Toronto, Canada</li>
                   </ul>
