--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="contact.html">Contact</a>
             <a href="publications.html">Publications</a>
             <a href="research.html">Research</a>
+            <a href="teaching.html">Teaching</a>
             <a href="cv.html">CV</a>
             <a href="activities.html">Activities</a>
         </nav>
@@ -36,3 +37,4 @@
     </footer>
 </body>
 </html>
+
