--- a/publications.html
+++ b/publications.html
@@ -14,6 +14,7 @@
             <a href="contact.html">Contact</a>
             <a href="publications.html">Publications</a>
             <a href="research.html">Research</a>
+            <a href="teaching.html">Teaching</a>
             <a href="cv.html">CV</a>
             <a href="activities.html">Activities</a>
         </nav>
