--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
             <a href="about.html">About</a>
             <a href="publications.html">Publications</a>
             <a href="research.html">Research</a>
+            <a href="teaching.html">Teaching</a>
             <a href="cv.html">CV</a>
         </nav>
     </header>
