--- a/publications.html
+++ b/publications.html
@@ -36,7 +36,7 @@
         <section>
             <h3>Conference Papers</h3>
             <ul>
-                <li><b> S. Fehresti, F. J. Kaleibar, M. Litoiu, </b>, “GRASP: A Graph-Based Proactive Framework for SLA-breach Prediction,” <i>35th IEEE International Conference on Collaborative Advances in Software and Computing (CASCON 2025), Toronto, Canada </i>, 2025 (Accepted).</li>
+                <li><b> S. Fehresti, F. J. Kaleibar, M. Litoiu, </b>, “GRASP: A Graph-Based Proactive Framework for SLA-breach Prediction,” <i>35th IEEE International Conference on Collaborative Advances in Software and Computing (CASCON 2025), Toronto, Canada </i>, 2025 (Accepted) - <b>Best Paper Award</b>.</li>
                 <li><b> F.J. Kaleibar, St-Hilaire, M., Barati, M. </b>, “Optimizing Service Allocation in Vehicular Cloud Networks: A User-Preference-Based Approach using NSGA-II,” <i>12th International Symposium on Networks, Computers and Communications (ISNCC'2025), Paris, France </i>, 2025 (Accepted).</li>
                 <li><b> F. J. Kaleibar, M. Litoiu </b>, “A Distributed GAN-Based Framework for Low-Latency and Efficient Learning in the Internet of Vehicles,” <i>33rd International Symposium on the Modeling, Analysis, and Simulation of Computer and Telecommunication System (MASCOTS2025), Paris, France </i>, 2025 (Accepted).</li>
                 <li><b>R. Rouf, F. J. Kaleibar, M. Litoiu, M. Rasolroveicy, S. Nagar, P. Mohapatra, P. Gupta, I. Watts </b>, “Identifying Failure Root Causes for Cloud-Native Microservice Applications,” <i>6th IEEE International Conference on Autonomic Computing and Self-Organizing Systems - ACSOS 2025, Tokyo, Japan </i>, 2025 (Accepted).</li>
