--- a/activities.html
+++ b/activities.html
@@ -34,7 +34,8 @@
         <section>
             <h3>Workshops</h3>
             <ul>
-                <li>"Digital Transformation: From Maturity Measurement to Ideation," <i>IEEE 2023 7th Iranian Conference on Advances in Enterprise Architecture (ICAEA), Tehran, Iran</i></li>
+                <li>"Proactive SLO Compliance, from Cloud to Edge"<i>32nd Asia-Pacific Software Engineering Conference (APSEC 2025), Macau, China.</i></li>
+                <li>"Digital Transformation: From Maturity Measurement to Ideation," <i>IEEE 2023 7th Iranian Conference on Advances in Enterprise Architecture (ICAEA), Tehran, Iran.</i></li>
             </ul>
         </section>
     </main>
